--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "type": "git",
     "url": "git+https://github.com/yejin0216/webpack-boilerplate.git"
   },
-  "keywords": [
-    "webpack"
-  ],
   "author": "yejin kim (yejin0216@gmail.com)",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yejin0216/webpack-boilerplate/issues"
-  },
-  "homepage": "https://github.com/yejin0216/webpack-boilerplate#readme"
+  "devDependencies": {
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5"
+  }
 }
