--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "자바스크립트 모듈러인 Webpack를 실습하기 위한 소스 코드입니다.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "serve": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -13,7 +14,18 @@
   "author": "yejin kim (yejin0216@gmail.com)",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.35.0",
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   }
 }
