--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "webpack-boilerplate",
-  "version": "1.0.0",
-  "description": "자바스크립트 모듈러인 Webpack를 실습하기 위한 소스 코드입니다.",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack",
-    "serve": "webpack-dev-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yejin0216/webpack-boilerplate.git"
-  },
-  "author": "yejin kim (yejin0216@gmail.com)",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.2.6",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^0.23.1",
-    "webpack-dev-server": "^3.11.2"
-  },
+  "name": "words-light-library",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "webpack": "^5.38.1",
-    "webpack-cli": "^3.3.12"
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
